# dotenvor

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yaml
benches/: load.rs  parse.rs
src/: env.rs  error.rs  lib.rs  loader.rs  model.rs  parser.rs
tests/: cli.rs  load.rs  parity.rs
tests/fixtures/: go-export.env  node-basic.env  node-multiline.env
